--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,11 +2,11 @@ extends ../templates/page/page
 include ../components/welcome/welcome
 
 block head
-  - const pageTitle = "Главная";
-  - const pageDescription = "Шаблон проекта для быстрого старта с webpack, pug и scss";
-  - const pageKeywords = "webpack, pug, scss";
+  - const pageTitle = "Portfoio";
+  - const pageDescription = "";
+  - const pageKeywords = "portfolio";
 
 block content
-  +welcome({
-    message: 'Welcome! <br/> Happy coding!'
-  })
+  //- +welcome({
+  //-   message: 'Welcome! <br/> Happy coding!'
+  //- })
