--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -12,28 +12,33 @@ $font-path: '../fonts/';
 // }
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('#{$font-path}OpenSans-Regular.woff2') format('woff2'),
-    url('#{$font-path}OpenSans-Regular.woff') format('woff');
+  font-family: 'Inter-Bold';
+  src: url('#{$font-path}Inter-Bold.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('#{$font-path}OpenSans-Bold.woff2') format('woff2'),
-    url('#{$font-path}OpenSans-Bold.woff') format('woff');
-  font-weight: bold;
+  font-family: 'Inter-Medium';
+  src: url('#{$font-path}Inter-Medium.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('#{$font-path}OpenSans-Italic.woff2') format('woff2'),
-    url('#{$font-path}OpenSans-Italic.woff') format('woff');
+  font-family: 'Inter-Regular';
+  src: url('#{$font-path}Inter-Regular.woff2') format('woff2');
   font-weight: normal;
-  font-style: italic;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter-SemiBold';
+  src: url('#{$font-path}Inter-SemiBold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
   font-display: swap;
 }
