--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,5 +1,6 @@
 extends ../templates/page/page
 include ../components/welcome/welcome
+include ../components/header/header
 
 block head
   - const pageTitle = "Portfoio";
@@ -10,3 +11,4 @@ block content
   //- +welcome({
   //-   message: 'Welcome! <br/> Happy coding!'
   //- })
+  +header
