--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,63 @@
 @import '../../scss/mixins';
 // @import '~bootstrap/scss/bootstrap-reboot';
 
+.header {
+  &__wrapper {
+    padding: 30px 0px;
+    @include flex(column, wrap, flex-start, center);
+    @media only screen and (min-width: 768px) {
+      @include flex(row, wrap, space-between, flex-start);
+      padding: 46px 0px;
+    }
+    @media only screen and (min-width: 1200px) {
+      padding: 46px 26px;
+    }
+  }
+  &__name {
+    margin: 0;
+    font-family: $ib;
+    font-size: 24px;
+    color: $orange;
+    text-align: center;
+    span {
+      color: #fff;
+    }
+  }
+  &__menu {
+    @include flex(column, wrap, flex-start, center);
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    margin-top: 40px;
+    @media only screen and (min-width: 768px) {
+      margin-top: 0px;
+      @include flex(row, wrap, space-between, flex-start);
+    }
+  }
+  &__menu-item {
+    @include flex(column, wrap, flex-start, center);
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    @media only screen and (min-width: 768px) {
+      margin: 0px;
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
+    &:first-child {
+      margin-top: 0px;
+    }
+  }
+  &__menu-link {
+    text-decoration: none;
+    font-family: $im;
+    font-size: 16px;
+    color: #fff;
+  }
+}
+
 // Bootstrap Media Queries
 // @include media-breakpoint-up(sm) {}
 // @include media-breakpoint-up(md) {}
