--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,7 @@
 extends ../templates/page/page
 include ../components/welcome/welcome
 include ../components/header/header
+include ../components/about/about
 
 block head
   - const pageTitle = "Portfoio";
@@ -12,3 +13,4 @@ block content
   //-   message: 'Welcome! <br/> Happy coding!'
   //- })
   +header
+  +about
