about pug is finished

--- a/src/components/about/about.pug
+++ b/src/components/about/about.pug
@@ -2,3 +2,30 @@ mixin about(props = {})
   - const {  } = props;
 
   .about
+    .about__wrapper.wrapper
+      //- p.about__paragraph Hello! I specialize in #[span.about__paragraph-yellow HTML/CSS coding], my experience is 3+ years. I'm committed to deliver #[span.about__paragraph-yellow high quality services] and to make sure that the clients' requirements are met at the best possible level. Here is the list of #[span.about__paragraph-yellow my skills]:
+      p.about__paragraph Привет! Я специализируюсь на #[span.about__paragraph-yellow верстке сайтов], мой опыт в этом более 3 лет. Гарантирую #[span.about__paragraph-yellow высокое качество верстки] и стараюсь делать так, чтобы все пожелания моих клиентов были учтены. Список #[span.about__paragraph-yellow моих навыков]:
+      //- ul.about__skill-list
+      //-   li.about__skill-list-item HTML (advanced)
+      //-   li.about__skill-list-item CSS (advanced)
+      //-   li.about__skill-list-item Bootstrap
+      //-   li.about__skill-list-item JavaScript (basic)
+      //-   li.about__skill-list-item BEM
+      //-   li.about__skill-list-item Gulp
+      //-   li.about__skill-list-item Pug
+      //-   li.about__skill-list-item Sass
+      //-   li.about__skill-list-item Adaptiveness & Responsiveness
+      //-   li.about__skill-list-item Flexbox / Grid / Block / Table
+      //-   li.about__skill-list-item Git
+      ul.about__skill-list
+        li.about__skill-list-item HTML (продвинутый)
+        li.about__skill-list-item CSS (продвинутый)
+        li.about__skill-list-item Bootstrap
+        li.about__skill-list-item JavaScript (базовый)
+        li.about__skill-list-item BEM
+        li.about__skill-list-item Gulp
+        li.about__skill-list-item Pug
+        li.about__skill-list-item Sass
+        li.about__skill-list-item Adaptiveness & Responsiveness
+        li.about__skill-list-item Flexbox / Grid / Block / Table
+        li.about__skill-list-item Git
