--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -3,6 +3,32 @@
 // @import '~bootstrap/scss/bootstrap-reboot';
 
 .about {
+  &__wrapper {
+    padding: 40px 0px;
+  }
+  &__paragraph {
+    width: 100%;
+    margin: 0;
+    font-family: $im;
+    font-size: 28px;
+    color: #fff;
+  }
+  &__paragraph-yellow {
+    color: $orange;
+  }
+  &__skill-list {
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    padding-left: 20px;
+  }
+  &__skill-list-item {
+    padding: 0;
+    margin: 0;
+    font-family: $im;
+    font-size: 18px;
+    color: #fff;
+  }
 }
 
 // Bootstrap Media Queries
