about scss adaptation is finished

--- a/src/components/about/about.pug
+++ b/src/components/about/about.pug
@@ -16,7 +16,7 @@ mixin about(props = {})
       //-   li.about__skill-list-item Sass
       //-   li.about__skill-list-item Adaptiveness & Responsiveness
       //-   li.about__skill-list-item Flexbox / Grid / Block / Table
-      //-   li.about__skill-list-item Git (Github, Gitlab, Bitbucket)
+      //-   li.about__skill-list-item Git (Github, Gitlab, Bitbucket etc.)
       ul.about__skill-list
         li.about__skill-list-item HTML (продвинутый)
         li.about__skill-list-item CSS (продвинутый)
@@ -28,4 +28,4 @@ mixin about(props = {})
         li.about__skill-list-item Sass
         li.about__skill-list-item Adaptiveness & Responsiveness
         li.about__skill-list-item Flexbox / Grid / Block / Table
-        li.about__skill-list-item Git (Github, Gitlab, Bitbucket)
+        li.about__skill-list-item Git (Github, Gitlab, Bitbucket и т.д.)
