--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,7 @@
 
 .about {
   &__wrapper {
-    padding: 40px 0px;
+    padding: 40px 26px;
   }
   &__paragraph {
     width: 100%;
@@ -12,6 +12,9 @@
     font-family: $im;
     font-size: 28px;
     color: #fff;
+    @media only screen and (min-width: 768px) {
+      width: 550px;
+    }
   }
   &__paragraph-yellow {
     color: $orange;
