--- a/src/components/works/works.pug
+++ b/src/components/works/works.pug
@@ -2,3 +2,37 @@ mixin works(props = {})
   - const {  } = props;
 
   .works
+    .works__wrapper.wrapper
+      h3.works__headline Selected Works
+      hr.works__splitter
+      .works__content
+        .works__item.works__item1
+          .works__item-img.works__item-img1
+          h4.works__item-headline item-headline1
+          a.prevdef.works__item-link(href="#") item-link1
+            span.works__link-arrow
+        .works__item.works__item2
+          .works__item-img.works__item-img2
+          h4.works__item-headline item-headline2
+          a.prevdef.works__item-link(href="#") item-link2
+            span.works__link-arrow
+        .works__item.works__item3
+          .works__item-img.works__item-img3
+          h4.works__item-headline item-headline3
+          a.prevdef.works__item-link(href="#") item-link3
+            span.works__link-arrow
+        .works__item.works__item4
+          .works__item-img.works__item-img4
+          h4.works__item-headline item-headline4
+          a.prevdef.works__item-link(href="#") item-link4
+            span.works__link-arrow
+        .works__item.works__item5
+          .works__item-img.works__item-img5
+          h4.works__item-headline item-headline5
+          a.prevdef.works__item-link(href="#") item-link5
+            span.works__link-arrow
+        .works__item.works__item6
+          .works__item-img.works__item-img6
+          h4.works__item-headline item-headline6
+          a.prevdef.works__item-link(href="#") item-link6
+            span.works__link-arrow
