--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,6 +2,7 @@ extends ../templates/page/page
 include ../components/welcome/welcome
 include ../components/header/header
 include ../components/about/about
+include ../components/works/works
 
 block head
   - const pageTitle = "Portfoio";
@@ -14,3 +15,4 @@ block content
   //- })
   +header
   +about
+  +works
