--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -3,6 +3,118 @@
 // @import '~bootstrap/scss/bootstrap-reboot';
 
 .works {
+  &__wrapper {
+    padding: 40px 0px;
+  }
+  &__headline {
+    width: 100%;
+    margin: 0px;
+    font-family: $im;
+    font-weight: 400;
+    font-size: 40px;
+    color: #fff;
+    text-transform: capitalize;
+    @media only screen and (min-width: 576px) {
+      font-size: 64px;
+    }
+  }
+  &__splitter {
+    width: 100%;
+    margin: 0px;
+    border: none;
+    height: 2px;
+    background: $orange;
+    margin-top: 32px;
+  }
+  &__content {
+    width: 100%;
+    @include flex(column, wrap, flex-start, flex-start);
+    margin-top: 64px;
+  }
+  &__item {
+    width: 100%;
+    @include flex(column, wrap, flex-start, flex-start);
+    margin-top: 40px;
+    &:first-child {
+      margin-top: 0px;
+    }
+  }
+  &__item1 {
+  }
+  &__item2 {
+  }
+  &__item3 {
+  }
+  &__item4 {
+  }
+  &__item5 {
+  }
+  &__item6 {
+  }
+  &__item:hover &__item-img {
+    transform: scale(1.3);
+  }
+  &__item-img-container {
+    position: relative;
+    width: 100%;
+    height: 340px;
+    overflow: hidden;
+  }
+  &__item-img {
+    width: 100%;
+    height: 100%;
+    transition: 0.6s;
+  }
+  &__item-img1 {
+    background: url('../works/img/works__project1-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-img2 {
+    background: url('../works/img/works__project2-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-img3 {
+    background: url('../works/img/works__project3-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-img4 {
+    background: url('../works/img/works__project4-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-img5 {
+    background: url('../works/img/works__project5-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-img6 {
+    background: url('../works/img/works__project6-preview.webp');
+    background-position: center;
+    background-size: cover;
+  }
+  &__item-headline {
+    width: 100%;
+    margin: 0px;
+    font-family: $im;
+    font-size: 24px;
+    font-weight: 400;
+    color: #fff;
+    text-align: left;
+    margin-top: 15px;
+  }
+  &__item-link {
+    text-decoration: none;
+    font-family: $isb;
+    font-size: 14px;
+    color: $orange;
+    position: relative;
+    margin-top: 5px;
+  }
+  &__link-arrow {
+  }
 }
 
 // Bootstrap Media Queries
