--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,10 @@
 
 .about {
   &__wrapper {
-    padding: 40px 26px;
+    padding: 40px 0px;
+    @media only screen and (min-width: 1200px) {
+      padding: 40px 26px;
+    }
   }
   &__paragraph {
     width: 100%;
