--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -76,7 +76,7 @@
   &__item-img {
     width: 100%;
     height: 100%;
-    transition: 0.6s;
+    transition: 0.3s;
   }
   &__item-img1 {
     background: url('../works/img/works__project1-preview.webp');
@@ -122,11 +122,28 @@
     text-decoration: none;
     font-family: $isb;
     font-size: 14px;
+    font-weight: 400;
     color: $orange;
+    text-transform: uppercase;
     position: relative;
     margin-top: 5px;
-  }
-  &__link-arrow {
+    padding-bottom: 4px;
+    padding-right: 2px;
+    &::before {
+      content: '';
+      width: 0px;
+      height: 1px;
+      background: $orange;
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      opacity: 0;
+      transition: 0.3s;
+    }
+    &:hover::before {
+      width: 100%;
+      opacity: 1;
+    }
   }
 }
 
