contact files are created

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,6 +3,7 @@ include ../components/welcome/welcome
 include ../components/header/header
 include ../components/about/about
 include ../components/works/works
+include ../components/contact/contact
 
 block head
   - const pageTitle = "Portfoio";
@@ -16,3 +17,4 @@ block content
   +header
   +about
   +works
+  +contact
