contact pug is finished

--- a/src/components/contact/contact.pug
+++ b/src/components/contact/contact.pug
@@ -2,3 +2,10 @@ mixin contact(props = {})
   - const {  } = props;
 
   .contact
+    .contact__wrapper.wrapper
+      //- h3.contact__headline Contact
+      h3.contact__headline Контакты
+      hr.contact__splitter
+      .contact__links-container
+        a.contact__link(href="https://t.me/dmitrytravnikov" target="_blank") Telegram &UpperRightArrow;
+        p.contact__link(href="#") Discord: travnikov#6305
