--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -3,6 +3,59 @@
 // @import '~bootstrap/scss/bootstrap-reboot';
 
 .contact {
+  &__wrapper {
+    padding: 40px 0px;
+  }
+  &__headline {
+    width: 100%;
+    margin: 0px;
+    font-family: $im;
+    font-weight: 400;
+    font-size: 40px;
+    color: #fff;
+    text-transform: capitalize;
+    @media only screen and (min-width: 576px) {
+      font-size: 64px;
+    }
+  }
+  &__splitter {
+    width: 100%;
+    margin: 0px;
+    border: none;
+    height: 2px;
+    background: $orange;
+    margin-top: 32px;
+  }
+  &__links-container {
+    width: 100%;
+    @include flex(row, wrap, flex-start, flex-start);
+    margin-top: 44px;
+  }
+  &__link {
+    text-decoration: none;
+    width: auto;
+    margin: 0px;
+    margin-top: 20px;
+    font-family: $im;
+    font-weight: 400;
+    font-size: 20px;
+    color: #fff;
+    margin-right: 40px;
+    transition: 0.2s;
+    &:last-child {
+      margin-right: 0px;
+      color: #5662f6;
+      &:hover {
+        color: lighten(#5662f6, 3%);
+      }
+    }
+    &:first-child {
+      color: #138ecb;
+      &:hover {
+        color: lighten(#138ecb, 3%);
+      }
+    }
+  }
 }
 
 // Bootstrap Media Queries
