contact skype link is added

--- a/src/components/contact/contact.pug
+++ b/src/components/contact/contact.pug
@@ -7,5 +7,6 @@ mixin contact(props = {})
       h3.contact__headline Контакты
       hr.contact__splitter
       .contact__links-container
-        a.contact__link(href="https://t.me/dmitrytravnikov" target="_blank") Telegram &UpperRightArrow;
-        p.contact__link(href="#") Discord: travnikov#6305
+        a.contact__link.contact__telegram(href="https://t.me/dmitrytravnikov" target="_blank") Telegram &UpperRightArrow;
+        p.contact__link.contact__discord(href="#") Discord: travnikov#6305
+        p.contact__link.contact__skype(href="#") Skype: travnikov.skype
