to-top-button files are created

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,6 +4,7 @@ include ../components/header/header
 include ../components/about/about
 include ../components/works/works
 include ../components/contact/contact
+include ../components/to-top-button/to-top-button
 
 block head
   - const pageTitle = "Portfoio";
@@ -18,3 +19,4 @@ block content
   +about
   +works
   +contact
+  +to-top-button
