--- a/src/components/to-top-button/to-top-button.scss
+++ b/src/components/to-top-button/to-top-button.scss
@@ -3,6 +3,32 @@
 // @import '~bootstrap/scss/bootstrap-reboot';
 
 .to-top-button {
+  bottom: 0px;
+  right: 0px;
+  width: 60px;
+  height: 60px;
+  background: $orange;
+  position: fixed;
+  cursor: pointer;
+  text-decoration: none;
+  transition: 0.2s;
+  &:hover {
+    background: darken($orange, 3%);
+  }
+  &::before {
+    content: '\2191';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: $im;
+    font-size: 36px;
+    color: $space-grey;
+    text-align: center;
+  }
+  &.mPS2id-highlight {
+    opacity: 0;
+  }
 }
 
 // Bootstrap Media Queries
