page-scroll-to-id header links are setted up

--- a/src/components/about/about.pug
+++ b/src/components/about/about.pug
@@ -1,7 +1,7 @@
 mixin about(props = {})
   - const {  } = props;
 
-  .about
+  .about#about
     .about__wrapper.wrapper
       //- p.about__paragraph Hello! I specialize in #[span.about__paragraph-yellow HTML/CSS coding], my experience is 3+ years. I'm committed to deliver #[span.about__paragraph-yellow high quality services] and to make sure that the clients' requirements are met at the best possible level. Here is the list of #[span.about__paragraph-yellow my skills]:
       p.about__paragraph Привет! Я специализируюсь на #[span.about__paragraph-yellow верстке сайтов], мой опыт в этом более 3 лет. Гарантирую #[span.about__paragraph-yellow высокое качество верстки] и стараюсь делать так, чтобы все пожелания моих клиентов были учтены. Список #[span.about__paragraph-yellow моих навыков]:
