--- a/src/components/contact/contact.pug
+++ b/src/components/contact/contact.pug
@@ -1,7 +1,7 @@
 mixin contact(props = {})
   - const {  } = props;
 
-  .contact
+  .contact#contact
     .contact__wrapper.wrapper
       //- h3.contact__headline Contact
       h3.contact__headline Контакты
