--- a/src/components/works/works.pug
+++ b/src/components/works/works.pug
@@ -1,7 +1,7 @@
 mixin works(props = {})
   - const {  } = props;
 
-  .works
+  .works#works
     .works__wrapper.wrapper
       //- h3.works__headline Selected Works
       h3.works__headline Избранные работы
