--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -7,15 +7,15 @@ mixin header(props = {})
       h3.header__name Дмитрий #[span Травников]
       //- nav.header__menu
       //-   li.header__menu-item
-      //-     a.prevdef.header__menu-link(href="#") About
+      //-     a.header__menu-link(href="#about") About
       //-   li.header__menu-item
-      //-     a.prevdef.header__menu-link(href="#") Works
+      //-     a.header__menu-link(href="#works") Works
       //-   li.header__menu-item
-      //-     a.prevdef.header__menu-link(href="#") Contact
+      //-     a.header__menu-link(href="#contact") Contact
       nav.header__menu
         li.header__menu-item
-          a.prevdef.header__menu-link(href="#") Обо мне
+          a.header__menu-link(href="#about") Обо мне
         li.header__menu-item
-          a.prevdef.header__menu-link(href="#") Мои работы
+          a.header__menu-link(href="#works") Мои работы
         li.header__menu-item
-          a.prevdef.header__menu-link(href="#") Контакты
+          a.header__menu-link(href="#contact") Контакты
