--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,7 @@
 mixin header(props = {})
   - const {} = props;
 
-  .header
+  .header#top
     .header__wrapper.wrapper
       //- h3.header__name Dmitry #[span Travnikov]
       h3.header__name Дмитрий #[span Травников]
