--- a/src/components/works/works.pug
+++ b/src/components/works/works.pug
@@ -7,25 +7,25 @@ mixin works(props = {})
       h3.works__headline Избранные работы
       hr.works__splitter
       .works__content
-        .works__item.works__item1
+        .works__item.works__item1.wow.animate__animated.animate__fadeInLeft
           .works__item-img-container
             .works__item-img.works__item-img1
           h4.works__item-headline Repair company
           //- a.works__item-link(href="https://dmitrytravnikov.github.io/repair-design-project/dist/" target="_blank") Show this work
           a.works__item-link(href="https://dmitrytravnikov.github.io/repair-design-project/dist/" target="_blank") Посмотреть работу ->
-        .works__item.works__item2
+        .works__item.works__item2.wow.animate__animated.animate__fadeInRight
           .works__item-img-container
             .works__item-img.works__item-img2
           h4.works__item-headline Cloudbudget
           //- a.works__item-link(href="https://dmitrytravnikov.github.io/cloudbudget/dist/" target="_blank") Show this work
           a.works__item-link(href="https://dmitrytravnikov.github.io/cloudbudget/dist/" target="_blank") Посмотреть работу ->
-        .works__item.works__item3
+        .works__item.works__item3.wow.animate__animated.animate__fadeInLeft
           .works__item-img-container
             .works__item-img.works__item-img3
           h4.works__item-headline Xtina
           //- a.works__item-link(href="https://dmitrytravnikov.github.io/xtina/" target="_blank") Show this work
           a.works__item-link(href="https://dmitrytravnikov.github.io/xtina/" target="_blank") Посмотреть работу ->
-        .works__item.works__item4
+        .works__item.works__item4.wow.animate__animated.animate__fadeInRight
           .works__item-img-container
             .works__item-img.works__item-img4
           h4.works__item-headline Axit
@@ -33,13 +33,13 @@ mixin works(props = {})
           a.works__item-link(href="https://dmitrytravnikov.github.io/axit/dist/" target="_blank") Посмотреть работу ->
         .works__item.works__item5
           .works__item-img-container
-            .works__item-img.works__item-img5
+            .works__item-img.works__item-img5.wow.animate__animated.animate__fadeInLeft
           h4.works__item-headline Life calculator
           //- a.works__item-link(href="https://dmitrytravnikov.github.io/life-calculator/" target="_blank") Show this work
           a.works__item-link(href="https://dmitrytravnikov.github.io/life-calculator/" target="_blank") Посмотреть работу ->
         .works__item.works__item6
           .works__item-img-container
-            .works__item-img.works__item-img6
+            .works__item-img.works__item-img6.wow.animate__animated.animate__fadeInRight
           h4.works__item-headline Architecture
           //- a.works__item-link(href="https://dmitrytravnikov.github.io/architecture/dist/" target="_blank") Show this work
           a.works__item-link(href="https://dmitrytravnikov.github.io/architecture/dist/" target="_blank") Посмотреть работу ->
