to-top-button scss is updated

--- a/src/components/to-top-button/to-top-button.scss
+++ b/src/components/to-top-button/to-top-button.scss
@@ -11,7 +11,6 @@
   position: fixed;
   cursor: pointer;
   text-decoration: none;
-  transition: 0.2s;
   &:hover {
     background: darken($orange, 3%);
   }
@@ -27,7 +26,7 @@
     text-align: center;
   }
   &.mPS2id-highlight {
-    opacity: 0;
+    display: none;
   }
 }
 
