--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,6 +5,7 @@ include ../components/about/about
 include ../components/works/works
 include ../components/contact/contact
 include ../components/to-top-button/to-top-button
+include ../components/preloader/preloader
 
 block head
   - const pageTitle = "Portfoio";
@@ -20,3 +21,4 @@ block content
   +works
   +contact
   +to-top-button
+  +preloader
