preloader js is finished

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -8,7 +8,7 @@ include ../components/to-top-button/to-top-button
 include ../components/preloader/preloader
 
 block head
-  - const pageTitle = "Portfoio";
+  - const pageTitle = "Portfolio";
   - const pageDescription = "";
   - const pageKeywords = "portfolio";
 
