particles.js files are created and setted up

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,6 +6,7 @@ include ../components/works/works
 include ../components/contact/contact
 include ../components/to-top-button/to-top-button
 include ../components/__preloader/preloader
+include ../components/particles/particles
 
 block head
   - const pageTitle = "Portfolio";
@@ -22,3 +23,4 @@ block content
   +works
   +contact
   +to-top-button
+  +particles
